# rag-engine

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: Direct Premiums Written, P_C Insurance By State, 2023 (1).xls
src/: __init__.py  cli.py  config.py  data.py  db.py  main.py  run.py  services.py  settings.py  sql.py  util.py
src/agents/: __init__.py  document_processor.py  ingest.py  vector_store.py
src/api/: app.py  deps.py  route_healthcheck.py  route_notes.py  route_query.py  route_topics.py
src/data/: __init__.py  base.py  generic_tabular.py  insurance_average_expenditure.py  textual.py
src/ingest/: __init__.py  config.py  graph.py  node_extract.py  node_fetch.py  node_index_and_store.py  node_ingest.py  state.py
src/query/: __init__.py  graph.py  node_classify_query.py  node_fetch_weather_info.py  node_generate.py  node_reformulate_query.py  node_retrieve.py  state.py
src/workflow_ingest/: graph.py  node_extract.py  node_fetch.py  node_index_and_store.py  state.py
src/workflow_query/: __init__.py  graph.py  node_classify_query.py  node_fetch_weather_info.py  node_generate.py  node_reformulate_query.py  node_reformulate_query__STUB.py  node_rerank__STUB.py  node_retrieve.py  node_retrieve_from_knowledge_base.py  node_retrieve_from_weather_service.py  state.py
tests/: conftest.py  test_api.py  test_data.py  test_document_processor.py  test_example.py  test_ingest.py  test_ingest_insurance.py  test_playground.py  test_query.py  test_query_insurance.py
tests/__snapshots__/: test_api.ambr  test_data.ambr  test_document_processor.ambr  test_ingest.ambr  test_ingest_insurance.ambr  test_query.ambr  test_query_insurance.ambr
tests/cassettes/test_api/: test_poor_mans_e2e_test.yaml  test_user_flow.yaml
tests/cassettes/test_ingest/: test_extract_generic_tabular_data.yaml
tests/cassettes/test_query/: test_classify_query.yaml  test_classify_query_detects_weather_query.yaml  test_generate.yaml  test_generate_from_external_service.yaml  test_generate_from_knowledge_base.yaml  test_graph_with_insurance_queries[What-s the trend in auto insurance costs over the last 3 years-].yaml  test_graph_with_insurance_trend_query.yaml  test_graph_with_knowledge_query.yaml  test_graph_with_travel_info_query.yaml  test_graph_with_weather_query.yaml  test_reformulate_query.yaml  test_reformulate_query__STUB.yaml
tests/cassettes/test_query_insurance/: test_graph_with_insurance_queries[What is the trend in auto insurance costs between 2012 and 2015-].yaml
