[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["John Doe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
python-dotenv = "^1.0.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
langchain-anthropic = "^0.3.1"
langchain-postgres = "^0.0.12"
psycopg = {extras = ["binary"], version = "^3.2.3"}
openai = "^1.59.5"
langchain-openai = "^0.2.14"
anthropic = "^0.42.0"
unstructured = "^0.16.12"
networkx = "^3.4.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pinecone = "^5.4.2"
langchain-pinecone = "^0.2.2"
sqlalchemy = "^2.0.37"
langchain-chroma = "^0.2.0"
langgraph = "^0.2.62"
pyowm = "^3.3.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
pytest = "^7.4.1"
syrupy = "^4.5.0"
mypy = "^1.5.1"
black = "^23.9.1"
pytest-watcher = "^0.4.3"
pytest-only = "^2.1.2"
# workaround for https://github.com/theY4Kman/pytest-only/issues/14
# can be removed once pytest-only is fixed
setuptools = "^75.8.0"
pytest-integration-mark = "^0.2.0"
pytest-recording = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test_watch = "ptw . -- --capture=no -vv"
test = "pytest"
test_update_snapshots = "pytest --snapshot-update"
test_with_network_calls = "pytest --record-mode=new_episodes"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }

[tool.black]

[tool.pytest-watcher]
now = true
