[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["John Doe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
python-dotenv = "^1.0.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
langchain-anthropic = "^0.3.1"
langchain-postgres = "^0.0.12"
psycopg = {extras = ["binary"], version = "^3.2.3"}
openai = "^1.59.5"
langchain-openai = "^0.2.14"
anthropic = "^0.42.0"
unstructured = "^0.16.12"
networkx = "^3.4.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pinecone = "^5.4.2"
langchain-pinecone = "^0.2.2"
sqlalchemy = "^2.0.37"
langchain-chroma = "^0.2.0"
langgraph = "^0.2.62"
pyowm = "^3.3.0"
data-uri-parser = "^0.1.11"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
pytest = "^7.4.1"
syrupy = "^4.5.0"
mypy = "^1.5.1"
black = "^23.9.1"
pytest-watcher = "^0.4.3"
pytest-only = "^2.1.2"
# workaround for https://github.com/theY4Kman/pytest-only/issues/14
# can be removed once pytest-only is fixed
setuptools = "^75.8.0"
pytest-integration-mark = "^0.2.0"
pytest-recording = "^0.13.2"
pytest-timeout = "^2.3.1"
lxml-stubs = "^0.5.1"
pandas-stubs = "^2.2.3.241126"
types-deprecated = "^1.2.15.20241117"
types-markdown = "^3.7.0.20241204"
types-pillow = "^10.2.0.20240822"
types-pymysql = "^1.1.0.20241103"
types-pyyaml = "^6.0.12.20241230"
types-pygments = "^2.19.0.20250107"
types-beautifulsoup4 = "^4.12.0.20241020"
types-cachetools = "^5.5.0.20240820"
types-cffi = "^1.16.0.20241221"
types-colorama = "^0.4.15.20240311"
types-hdbcli = "^2.23.0.20241221"
types-jsonschema = "^4.23.0.20241208"
types-protobuf = "^5.29.1.20241207"
types-psutil = "^6.1.0.20241221"
types-psycopg2 = "^2.9.21.20241019"
types-pyopenssl = "^24.1.0.20240722"
types-redis = "^4.6.0.20241004"
types-regex = "^2024.11.6.20241221"
types-requests = "^2.32.0.20241016"
types-tqdm = "^4.67.0.20241221"
types-tree-sitter = "^0.20.1.20240311"
types-tree-sitter-languages = "^1.10.0.20240612"
types-xmltodict = "^0.14.0.20241009"
pytest-fastapi-deps = "^0.2.3"
fastapi = {extras = ["testclient"], version = "^0.115.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest"
test_watch = "ptw . -- --capture=no -vv"
test_update_snapshots = "pytest --snapshot-update"
test_with_new_network_calls = "pytest --record-mode=new_episodes"
test_with_all_network_calls = "pytest --record-mode=all"
typecheck = "mypy src tests"
initdb = "python src/run.py initdb"
demo_ingest = "python src/run.py ingest --data 'data/Average Expenditures for Auto Insurance, 2012-2021.xls'"
demo_query = "python src/run.py query 'What is the trend in auto insurance costs over the last 3 years?'"


[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }

[tool.black]

[tool.pytest-watcher]
now = true
